fix: 🐛 fixing spacings

--- a/src/components/session/session.styles.scss
+++ b/src/components/session/session.styles.scss
@@ -70,7 +70,7 @@ $unreadButtonSize: 18px;
 
 	&__acceptance {
 		text-align: center;
-		margin-top: $grid-base-four;
+		margin: $grid-base-four 0;
 	}
 
 	&__content {
