--- a/src/components/waitingRoom/waitingRoom.styles.scss
+++ b/src/components/waitingRoom/waitingRoom.styles.scss
@@ -37,7 +37,7 @@
 		}
 
 		.text {
-			margin-top: $grid-base-five;
+			margin-top: $grid-base-four;
 		}
 
 		.text + .text {
